# alec-learning-loop

./: .gitignore  ARCHITECTURE.md  Dockerfile.test  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
core/: __init__.py
core/agents/: Dockerfile  README.md  __init__.py  main.py  requirements.txt
core/common/: __init__.py  ace.py  base_service.py  embedding_client.py  errors.py  kafka_admin.py  kafka_client.py  observability.py  postgres.py
core/learning_loop/: Dockerfile  README.md  __init__.py  main.py  requirements.txt
core/llm_gateway/: Dockerfile  __init__.py  requirements.txt
core/session/: Dockerfile  README.md  __init__.py  main.py  metrics.py  requirements.txt  service.py
docker/init/: 01_init_db.sql  02_sessions.sql  03_playbooks.sql  05_session_events.sql  10_evaluation_tables.sql  13_problem_solution_migration.sql  14_evaluation_tracking.sql  15_service_configs.sql  17_experiment_container_tracking.sql  18_problem_embedding_384.sql  20_service_prompts.sql  21_learning_loop.sql  22_schema_migrations.sql  23_v3_aku_columns.sql  24_fix_source_constraint.sql  (+3 more)
e2e/: __init__.py  conftest.py  requirements.txt
frontend/: Dockerfile  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
mockup-react/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: backup-full-state.sh  backup-learning-data.sh  restore-full-state.sh  restore-learning-data.sh  run_migrations.py  verify_gap021_fix.py
(+267 files in other folders)
