[project]
name = "alec"
version = "1.0.0"
description = "Adaptive Learning & Execution Core - Event-driven learning system for conversational AI"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "core"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | node_modules
    | frontend
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", ".venv", "venv", "__pycache__", "node_modules", "frontend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "frontend",
    "node_modules",
    "__pycache__",
    ".venv",
    "venv",
]

# docker-py doesn't ship type stubs - ignore errors in files using docker
[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "core.session.api.evaluation.runner"
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "node_modules",
    "frontend",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long - handled by black
]
